@@ -58,6 +58,7 @@ S3method(plot, factor)
 S3method(plot, formula)
 S3method(plot, "function")
 S3method(plot, histogram)
+S3method(plot, raster)
 S3method(plot, table)
 S3method(points, default)
 S3method(points, formula)
